--- a/admin/index.html
+++ b/admin/index.html
@@ -8,5 +8,6 @@
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  netlify.configure({'site_id': youthful-swartz-ca3262.netlify.com});
 </body>
 </html>
