--- a/admin/index.html
+++ b/admin/index.html
@@ -6,8 +6,8 @@
   <title>Content Manager</title>
 </head>
 <body>
-  <!-- Include the script that builds the page and powers Netlify CMS -->
+  <!-- Include the script that builds the page and powers Netlify CMS   netlify.configure({'site_id': youthful-swartz-ca3262.netlify.com}); -->
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-  netlify.configure({'site_id': youthful-swartz-ca3262.netlify.com});
+
 </body>
 </html>
