--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,9 +1,13 @@
 ---
-layout: archive
 title: "Gallery"
 permalink: /gallery/
 author_profile: true
+layout: collection
+collection: portfolio
+entries_layout: grid
+classes: wide
 ---
+
 
 {% include base_path %}
 
