Update and rename portfolio.md to portfolio.html

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -2,7 +2,7 @@
 title: "Gallery"
 permalink: /gallery/
 author_profile: true
-layout: collection
+layout: archive
 collection: portfolio
 entries_layout: grid
 classes: wide
